<resources>
    <string name="app_name">MyGithub</string>
    <string name="detail_followers">Followers</string>
    <string name="detail_following">Following</string>
    <string name="cari_pengguna">Cari Pengguna</string>
    <string name="tom_preston_werner">-</string>
    <string name="mojombo">-</string>
    <string name="_2000">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="username">Username</string>
    <string name="no_followers">Tidak ada pengikut</string>
    <string name="no_following">Tidak ada yang diikuti</string>
    <string name="title_favoritefeature">Module Title</string>
    <string name="user_not_found">User Tidak Ditemukan</string>
    <string name="favorite_this_user">Favorite this user</string>
</resources>